# octotetrahedral-agi

./: .gitignore  ACTION_NEXT_SUBMISSION.md  ADVANCED_TESTING_COMPLETE.txt  ADVANCED_TEST_RESULTS.md  AGI_PHASE1_COMPLETE.md  AGI_PHASE2_COMPLETE.md  AGI_PHASE3_COMPLETE.md  AGI_PHASE4_COMPLETE.md  AGI_ROADMAP.md  ALEPH_TRANSCENDPLEX_INTEGRATION.md  ARCHITECTURE_COMPARISON.md  BENCHMARK_QUICKSTART.md  BREAKTHROUGH_45_PERCENT_TO_REARC.md  COMMAND_REFERENCE.txt  COMPOUNDING_INTEGRATIONS_GUIDE.md  COMPOUNDING_INTEGRATIONS_INDEX.md  COMPOUNDING_INTEGRATIONS_QUICKREF.md  CONFUCIUS_INTEGRATION_COMPLETE.md  CONFUCIUS_INTEGRATION_STATUS.md  CONFUCIUS_SDK_COMPLETION.md  CONFUCIUS_SDK_V2_COMPLETE.md  CONSCIOUSNESS_PROOF_REPORT.md  CRITICAL_2_92_ANALYSIS.md  CURRENT_STATUS_COMPLETE.txt  FULLER_INTEGRATION_GUIDE.md  GAIA_PHASE2_INTEGRATION_COMPLETE.txt  GAIA_SOLVER_USAGE_GUIDE.md  HIGHEST_SCORE_FOUND.md  IMPLEMENTATION_ROADMAP.md  ML_VOCABULARY_REFERENCE.md  NGVT_COMPLETE_SUMMARY.md  NGVT_COMPOUNDING_INTEGRATION_SUMMARY.md  NGVT_CONFUCIUS_INTEGRATION_PLAN.md  NGVT_DEMO_SERVERS_GUIDE.md  NGVT_FINAL_REPORT.md  NGVT_GAIA_INTEGRATION_GUIDE.md  NGVT_GAIA_SOLVER_COMPLETION.txt  NGVT_INSPECT_AI_SETUP.md  NGVT_LOAD_TESTING_SUMMARY.txt  NGVT_LOAD_TEST_REPORT.md  (+182 more)
adaptation/: __init__.py  lora.py  rna_editing.py
analysis/: quantization_results.json  quantization_test.py  timeseries_analysis.py  timeseries_results.json  visualize_coupling.py
arc-puzzle-catalog/: .gitignore  README.md  index.html  (+16 more)
octo-parallel-rs/: Cargo.toml
octo-parallel-rs/src/: block_attn_res.rs  limb_client.rs  main.rs
(+1495 files in other folders)
