[package]
name        = "octo-parallel"
version     = "0.1.0"
edition     = "2021"
description = "OctoTetrahedral parallel cognitive limb orchestrator"
authors     = ["GitMonsters"]

[[bin]]
name = "octo-parallel"
path = "src/main.rs"

[dependencies]
# Async runtime + HTTP server
tokio       = { version = "1",  features = ["full"] }
axum        = { version = "0.7", features = ["json"] }
tower       = { version = "0.4" }
tower-http  = { version = "0.5", features = ["cors", "trace"] }

# HTTP client (calls Python limb server)
reqwest     = { version = "0.12", features = ["json"] }

# Serialisation
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Tensor ops (Block AttnRes natively in Rust)
ndarray     = { version = "0.15", features = ["rayon"] }

# Parallel iterators
rayon       = "1"

# Base64 for tensor wire format
base64      = "0.22"

# Logging
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }

# Misc
anyhow      = "1"
clap        = { version = "4", features = ["derive"] }
